@@ -451,6 +451,8 @@ function KBMLM.SetMain_Lang()
 	KBM.Language.Options.AlertText:SetGerman("Alarmierungs-Text aktiviert")
 	KBM.Language.Options.AlertText:SetFrench("Texte Avertissement Alerte activé")
 	KBM.Language.Options.AlertText:SetRussian("Текст предупреждения разрешен")
+	KBM.Language.Options.AlertVert = KBM.Language:Add("Enable vertical alert bars")
+	KBM.Language.Options.AlertHorz = KBM.Language:Add("Enable horizontal alert bars")
 	KBM.Language.Options.UnlockFlash = KBM.Language:Add("Unlock alert border for scaling")
 	KBM.Language.Options.UnlockFlash:SetGerman("Alarmierungs Ränder sind änderbar.")
 	KBM.Language.Options.UnlockFlash:SetRussian("Разблокировать рамку предупреждения")
